--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     </head>
     <body>
         <div class="container">
+            <div id="preloader">
+                <div id="status"></div>
+            </div>
             <div class="navSearch">
                 <form method="get" class="countryForm">
-                    <label class="countryTitle">Country name</label>
-                    <input type="text" value="Country" class="get_title">
-                    <input type="submit" id="search" value=" ">
+                        <h1 class="countryTitle">Country name</h1>
+                        <div id="inputContainer">
+                        <div id="complete"></div>
+                        <input type="text" id="input" value="Country" class="get_title" placeholder="Country">
+                        <input type="submit" id="search" value=" ">
+                    </div>
                     <p class="error">Wrong country name</p>
                 </form>
                 </div>
@@ -310,9 +316,11 @@
             </div>
         </div>
 
-
+        
         <script src="./external/jquery-3.1.1.min.js"></script>
         <script src="./external/svg-pan-zoom.js"></script>
         <script src="./js/app.js"></script>
+        <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="http://hammerjs.github.io/dist/hammer.min.js"></script>
     </body>
 </html>
